Re: issue #22277 - Changes tooltip font color slightly for better contrast - Uses new classname in addition to '.bug' in case the .bug class gets removed from the client repo

--- a/assets/sass/2_fragments/_tool.scss
+++ b/assets/sass/2_fragments/_tool.scss
@@ -109,7 +109,8 @@
         @include margin-right(5px);
     }
 
-    .bug {
+    // .bug {
+    .tooltip-visible-el {
         display: none;
         position: absolute;
         top: -6px;
@@ -120,6 +121,7 @@
         white-space: nowrap;
         box-shadow: 0 0 16px rgba(0,0,0,0.12),
             0 16px 16px rgba(0,0,0,0.24);
+        color: #FEFEFE;
     }
 
     .map & {
